# AI_VOICE_AUTOMATION

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPENDENCIES_INSTALL_REPORT.md  Dockerfile  LICENSE  Makefile  PROJECT_PLAN.md  README.md  README_PROJECT.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run.py  run_all_tests.sh  supervisord.conf  test_1_start_api.sh  test_2_database.py  test_3_video_pipeline.py  test_4_api_endpoints.py  test_5_task_queue.py  test_6_full_integration.py  test_celery.py  test_install.py  test_openai_setup.sh  test_transcription_basic.py  test_transcription_service.py  test_transcription_simple.py  test_video_ingestion.py
alembic/: env.py
app/: __init__.py  main.py
app/api/: health.py  processing.py  videos.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  auth.py  health.py  jobs.py  videos.py
app/avatar/: service.py  tasks.py
app/core/: auth.py  celery_app.py  config.py  exceptions.py  logging.py  password.py  security.py
app/db/: __init__.py  base_class.py  session.py  types.py
app/ingest/: service.py  tasks.py
app/models/: __init__.py  avatar.py  database.py  job.py  platform.py  schemas.py  script.py  user.py  video.py
app/publish/: service.py  tasks.py
app/schemas/: __init__.py  avatar.py  job.py  platform.py  script.py  user.py  video.py
app/services/ai/: __init__.py  transcription.py
app/services/avatar/: __init__.py  avatar_generator.py
app/services/ingest/: __init__.py  batch_ingestion.py  url_validator.py  video_downloader.py  video_ingestion.py
app/services/publish/: __init__.py
app/services/transform/: __init__.py  content_transformer.py
app/tasks/: __init__.py  ai_tasks.py  celery_app.py  publishing_tasks.py  task_monitor.py  video_tasks.py  worker.py  workflow_tasks.py
app/tests/: test_api.py  test_utils.py
app/transform/: service.py  tasks.py
app/utils/: __init__.py  audio_utils.py  ffmpeg.py  ffmpeg_processor.py  file_utils.py  helpers.py  metadata_processor.py  storage.py
docs/: AI_TRANSCRIPTION.md  CELERY_TASKS.md  VIDEO_INGESTION.md
frontend/: README.md  app.js  index.html  styles.css
scripts/: init-db.sql  manage.py
